--- a/templates/level.html
+++ b/templates/level.html
@@ -24,13 +24,7 @@
 <script src="/static/js/jquery-1.10.1.min.js" type="text/javascript"></script>
 <script src="/static/js/script.js" type="text/javascript"></script>
   -->
- <!----Calender -------->
-  <link rel="stylesheet" href="/static/css/clndr.css" type="text/css" />
-  <script src="/static/js/underscore-min.js"></script>
-  <script src= "/static/js/moment-2.2.1.js"></script>
-  <script src="/static/js/clndr.js"></script>
-  <script src="/static/js/site.js"></script>
-  <!----End Calender -------->
+ 
 </head>
 <body>			       
 	    <div class="wrap">	 
@@ -68,10 +62,10 @@
 	</div>
 	  <div class="main">  
 	    <div class="wrap">  		 
-	       <div class="column_left">
+	       <div class="column_left rndm3">
 	       		<div class="column_middle_grid1">
 		         <div class="profile_picture">
-		         	<a><img src="/static/images/user.png" alt="" />	</a>		         
+		         	<a><img src="images/user.png" alt="" />	</a>		         
 		            <div class="profile_picture_name">
 		            	<h2>Welcome</h2>
 		            	<h2>{{name}}</h2>
@@ -110,10 +104,10 @@
 									
 						<div class="chart_list">
 			           	  <ul>
-			           	  	<li><a href="#" class="red"></a></li>
-			           	  	<li><a href="#" class="purple"></a></li>
-			           	  	<li><a href="#" class="yellow"></a></li>
-			           	  	<li><a href="#" class="blue"></a></li>
+			           	  	<li><a class="red"></a></li>
+			           	  	<li><a class="purple"></a></li>
+			           	  	<li><a class="yellow"></a></li>
+			           	  	<li><a class="blue"></a></li>
 			           	  	<div class="clear"></div>	
 			           	  </ul>
 			           </div>
@@ -136,36 +130,7 @@
 							var myDoughnut = new Chart(document.getElementById("canvas").getContext("2d")).Doughnut(doughnutData);					
 					</script>
 		          </div>
-		             
-	  		</div> 
-	  		
-            <div class="column_middle">
-            	<div class="column_right_grid" id="compt_image">
-            		<img src="/static/img/{{photo}}" />
-            	</div>
-              	<div class="column_right_grid qstn">
-                 <div class="newsletter">
-				   <h3>{{text}}</h3>
-					    <form method='post' action='/check_answer/'>
-					    {% csrf_token %}
-					    	<input type="hidden" hidden="true" name = "level" value="{{level}}"></input>
-					    	<span>
-					 	    <i><img src="/static/images/lock.png" alt="" /></i>
-					 	     <input type="text" name = "answer" value="Your answer" onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'Your Answer';}">
-					 	    </span>			 	    
-					 		<input type="submit" name="submit" class="my_button" value="Submit">
-					 	</form>
-				   </div>
-			   </div>
-		                   
-		        
-		          	           
-		       
-    	    </div>
-    	    
-            <div class="column_right">
-            	
-				 <div class="column_right_grid sign-in">
+		          <div class="column_right_grid sign-in rndm1">
 				 	<div class="sign_in">
 				       <h3>Visit and Like our facebook page for hints</h3>
 					   <!-- <form>
@@ -181,17 +146,48 @@
 					       <h4><a href="#">Forget Password?</a></h4> -->				   
           		       </div>
           		 	  <div class="signin_facebook">
-					   	 <p><a href="#">  <i> <img src="/static/images/facebook.png" alt="" /></i>Online Treasure Hunt facebook page</a></p>
+					   	 <p><a href="#">  <i> <img src="images/facebook.png" alt="" /></i>Online Treasure Hunt facebook page</a></p>
 				      </div>
 				   </div>
 				   
 				   <div class="social_networks">
 				      		<ul>
-				      			<li><a href="https://www.facebook.com/muktinitdurgapur" class="facebook"><i><img src="/static/images/facebook_icon.png" alt="" /></i> <span> Mukti 15 Facebook page</span><div class="clear"></div></a></li>
-				      			<li><a href="https://twitter.com/mukti_nitd" class="twitter"><i><img src="/static/images/tweets.png" alt="" /></i> <span> Mukti 15 Twitter page</span><div class="clear"></div></a></li>
+				      			<li><a href="https://www.facebook.com/muktinitdurgapur" class="facebook"><i><img src="images/facebook_icon.png" alt="" /></i> <span> Mukti 15 Facebook page</span><div class="clear"></div></a></li>
+				      			<li><a href="https://twitter.com/mukti_nitd" class="twitter"><i><img src="images/tweets.png" alt="" /></i> <span> Mukti 15 Twitter page</span><div class="clear"></div></a></li>
 				      		<!--	<li><a href="#" class="googleplus"><i><img src="images/google+.png" alt="" /></i> <span style='padding-right:10px;'>Mukti 15 Youtube Channel</span><div class="clear"></div></a></li> -->
 				    		</ul>
 		          	</div>
+		             
+	  		</div>
+
+	  		
+            <div class="column_middle rndm2">
+            	<div class="column_right_grid" id="compt_image">
+            		<img src="/static/img/{{photo}}" />
+            	</div>
+              	<div class="column_right_grid qstn">
+                 <div class="newsletter">
+				   <h3>{{text}}</h3>
+					    <form method='post' action='/check_answer/'>
+					    {% csrf_token %}
+					    	<input type="hidden" hidden="true" name = "level" value="{{level}}"></input>
+					    	<span class='rndm4'>
+					 	    <i><img src="images/lock.png" alt="" /></i>
+					 	     <input type="text" name = "answer" value="Your answer" onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'Your Answer';}">
+					 	    </span>			 	    
+					 		<input type="submit" name="submit" class="my_button" value="Submit">
+					 	</form>
+				   </div>
+			   </div>
+		                   
+		        
+		          	           
+		       
+    	    </div>
+    	    
+          <!--  <div class="column_right">
+            	
+				 
 
 		          	<div class="menu_box">
                      <h3>Rules</h3>
@@ -212,7 +208,7 @@
 				  
 				   
 				   
-             </div>
+             </div> -->
     	<div class="clear"></div>
  	 </div>
    </div>
