--- a/templates/index.html
+++ b/templates/index.html
@@ -19,7 +19,7 @@
               <div class="header_top">
                       <div class="menu">
                           
-                           <h2> Online Treasure Hunt</h2>
+                           <h2> Online Treasure Hunt - Mukti 2015</h2>
                             <script type="text/javascript" src="web/js/responsive-nav.js"></script>
                         </div>  
                       <div class="profile_details">
