--- a/templates/level.html
+++ b/templates/level.html
@@ -32,7 +32,7 @@
 	      	  <div class="header_top">
 					  <div class="menu">
 						  
-							<h2> Online Treasure Hunt</h2>
+							<h2> Online Treasure Hunt - Mukti 2015</h2>
 							
 							<script type="text/javascript" src="js/responsive-nav.js"></script>
 				        </div>	
@@ -146,7 +146,7 @@
 					       <h4><a href="#">Forget Password?</a></h4> -->				   
           		       </div>
           		 	  <div class="signin_facebook">
-					   	 <p><a href="#">  <i> <img src="images/facebook.png" alt="" /></i>Online Treasure Hunt facebook page</a></p>
+					   	 <p><a href="https://www.facebook.com/events/1387313484910337/?ref=br_tf">  <i> <img src="images/facebook.png" alt="" /></i>Online Treasure Hunt facebook page</a></p>
 				      </div>
 				   </div>
 				   
