--- a/templates/level.html
+++ b/templates/level.html
@@ -6,7 +6,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 <link href="/static/css/style.css" rel="stylesheet" type="text/css" media="all"/>
 <link href="/static/css/nav.css" rel="stylesheet" type="text/css" media="all"/>
-<link href='http://fonts.googleapis.com/css?family=Carrois+Gothic+SC' rel='stylesheet' type='text/css'>
+<link href='/static/http://fonts.googleapis.com/css?family=Carrois+Gothic+SC' rel='stylesheet' type='text/css'>
 <script type="text/javascript" src="/static/js/jquery.js"></script>
 <script type="text/javascript" src="/static/js/login.js"></script>
 <script type="text/javascript" src="/static/js/Chart.js"></script>
@@ -32,26 +32,27 @@
 	      	  <div class="header_top">
 					  <div class="menu">
 						  
-							<h2> Online Treasure Hunt - Mukti 2015</h2>
+							<h2> Online Treasure Hunt</h2>
 							
 							<script type="text/javascript" src="js/responsive-nav.js"></script>
 				        </div>	
 					  <div class="profile_details">
 				    		   <div id="loginContainer">
-				                  <a id="loginButton" class=""><span>Me</span></a>   
-				                    <div id="loginBox">                
-				                      <form id="loginForm">
-				                        <fieldset id="body">
-				                            <div class="user-info">
+				    		   <div class="user-info">
 							        			<h4>Hello,<a href="#"> {{name}} </a></h4>
 							        			<ul>
 							        				<li class="logout"><a href="/logout/"> Logout</a></li>
 							        				<div class="clear"></div>		
 							        			</ul>
-							        		</div>			                            
+							        		</div>
+				                <!--  <a id="loginButton" class=""><span>Me</span></a>   
+				                    <div id="loginBox">                
+				                      <form id="loginForm">
+				                        <fieldset id="body">
+				                            			                            
 				                        </fieldset>
 				                    </form>
-				                </div>
+				                </div> -->
 				            </div>
 				            	
 				             <div class="clear"></div>		  	
@@ -62,16 +63,61 @@
 	</div>
 	  <div class="main">  
 	    <div class="wrap">  		 
-	       <div class="column_left rndm3">
-	       		<div class="column_middle_grid1">
-		         <div class="profile_picture">
-		         	<a><img src="images/user.png" alt="" />	</a>		         
-		            <div class="profile_picture_name">
-		            	<h2>Welcome</h2>
-		            	<h2>{{name}}</h2>
-		            </div>
-		             
-		          </div>
+	       
+
+	  		
+            <div class="column_middle rndm2">
+            	<div class="column_right_grid" id="compt_image">
+            		<img src="/static/img/{{photo}}" />
+            	</div>
+              	<div class="column_right_grid qstn">
+                 <div class="newsletter">
+				   <h3>{{text}}</h3>
+					    <form method='post' action='/check_answer/'>
+					    {% csrf_token %}
+					    	<input type="hidden" hidden="true" name = "level" value="{{level}}"></input>
+					    	<span class='rndm4'>
+					 	    <i><img src="/static/images/lock.png" alt="" /></i>
+					 	     <input type="text" name = "answer" value="Your answer" onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'Your Answer';}">
+					 	    </span>			 	    
+					 		<input type="submit" name="submit" class="my_button" value="Submit">
+					 	</form>
+				   </div>
+			   </div>
+		                   
+		        
+		          	           
+		       
+    	    </div>
+    	    
+          <!--  <div class="column_right">
+            	
+				 
+
+		          	<div class="menu_box">
+                     <h3>Rules</h3>
+                       <div class="menu_box_list">
+                            <ul>
+                                <li><a >You  will be facing several challenging levels. The answer to a level may be a single word, multi-word or digits.</a></li>
+                                <li><a >Make sure that you type in all the answers in lowercase characters without any space between the words.</a></li>
+                                <li><a >Try to correlate the hints provided in the title, slug, image and the page source to find your way to the answer.</a></li>
+                                <li><a >Stay in touch with our official hint page which may help you in case you get stuck on any of the levels.</a></li>
+                                                        
+                            </ul>
+                      </div>
+                 </div>
+
+		          	
+
+
+				  
+				   
+				   
+             </div> -->
+
+             <div class="column_left rndm3">
+	       		<!--<div class="column_middle_grid1">
+		         
 		           <div class="articles_list">
 		           	  <ul>
 		           	  	<li><a class="red"> </a></li>
@@ -80,7 +126,7 @@
 		           	  	<div class="clear"></div>	
 		           	  </ul>
 		           </div>
-		       </div>
+		       </div> -->
 	    		<!-- <div class="menu_box">
 	    		 	 <h3>Menu Box</h3>
 	    		 	   <div class="menu_box_list">
@@ -96,7 +142,7 @@
 	    		 <div class="chart">
 		                <div class="diagram">
 		                  <canvas id="canvas" height="220" width="220"> </canvas>
-		                  <h4><span>{{pass_count}}</span><br /></h4>   
+		                  <h4><span>0</span><br /></h4>   
 		                 </div>
 		                 <h3>people have crossed this level</h3>
 		               	              
@@ -146,72 +192,25 @@
 					       <h4><a href="#">Forget Password?</a></h4> -->				   
           		       </div>
           		 	  <div class="signin_facebook">
-					   	 <p><a href="https://www.facebook.com/events/1387313484910337/?ref=br_tf">  <i> <img src="images/facebook.png" alt="" /></i>Online Treasure Hunt facebook page</a></p>
+					   	 <p><a href="#">  <i> <img src="/static/images/facebook.png" alt="" /></i>Online Treasure Hunt facebook page</a></p>
 				      </div>
 				   </div>
 				   
 				   <div class="social_networks">
 				      		<ul>
-				      			<li><a href="https://www.facebook.com/muktinitdurgapur" class="facebook"><i><img src="images/facebook_icon.png" alt="" /></i> <span> Mukti 15 Facebook page</span><div class="clear"></div></a></li>
-				      			<li><a href="https://twitter.com/mukti_nitd" class="twitter"><i><img src="images/tweets.png" alt="" /></i> <span> Mukti 15 Twitter page</span><div class="clear"></div></a></li>
+				      			<li><a href="https://www.facebook.com/muktinitdurgapur" class="facebook"><i><img src="/static/images/facebook_icon.png" alt="" /></i> <span> Mukti 15 Facebook page</span><div class="clear"></div></a></li>
+				      			<li><a href="https://twitter.com/mukti_nitd" class="twitter"><i><img src="/static/images/tweets.png" alt="" /></i> <span> Mukti 15 Twitter page</span><div class="clear"></div></a></li>
 				      		<!--	<li><a href="#" class="googleplus"><i><img src="images/google+.png" alt="" /></i> <span style='padding-right:10px;'>Mukti 15 Youtube Channel</span><div class="clear"></div></a></li> -->
 				    		</ul>
 		          	</div>
 		             
 	  		</div>
-
-	  		
-            <div class="column_middle rndm2">
-            	<div class="column_right_grid" id="compt_image">
-            		<img src="/static/img/{{photo}}" />
-            	</div>
-              	<div class="column_right_grid qstn">
-                 <div class="newsletter">
-				   <h3>{{text}}</h3>
-					    <form method='post' action='/check_answer/'>
-					    {% csrf_token %}
-					    	<input type="hidden" hidden="true" name = "level" value="{{level}}"></input>
-					    	<span class='rndm4'>
-					 	    <i><img src="images/lock.png" alt="" /></i>
-					 	     <input type="text" name = "answer" value="Your answer" onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'Your Answer';}">
-					 	    </span>			 	    
-					 		<input type="submit" name="submit" class="my_button" value="Submit">
-					 	</form>
-				   </div>
-			   </div>
-		                   
-		        
-		          	           
-		       
-    	    </div>
-    	    
-          <!--  <div class="column_right">
-            	
-				 
-
-		          	<div class="menu_box">
-                     <h3>Rules</h3>
-                       <div class="menu_box_list">
-                            <ul>
-                                <li><a >You  will be facing several challenging levels. The answer to a level may be a single word, multi-word or digits.</a></li>
-                                <li><a >Make sure that you type in all the answers in lowercase characters without any space between the words.</a></li>
-                                <li><a >Try to correlate the hints provided in the title, slug, image and the page source to find your way to the answer.</a></li>
-                                <li><a >Stay in touch with our official hint page which may help you in case you get stuck on any of the levels.</a></li>
-                                                        
-                            </ul>
-                      </div>
-                 </div>
-
-		          	
-
-
-				  
-				   
-				   
-             </div> -->
     	<div class="clear"></div>
  	 </div>
    </div>
+
+
+
    <div class="wrap">	 
 	      <div class="header">
 	      	  <div class="header_top">
