--- a/templates/level.html
+++ b/templates/level.html
@@ -192,14 +192,14 @@
 					       <h4><a href="#">Forget Password?</a></h4> -->				   
           		       </div>
           		 	  <div class="signin_facebook">
-					   	 <p><a href="https://www.facebook.com/events/1387313484910337/?ref=br_tf">  <i> <img src="/static/images/facebook.png target="_blank"" alt="" /></i>Online Treasure Hunt facebook page</a></p>
+					   	 <p><a href="https://www.facebook.com/events/1387313484910337/?ref=br_tf">  <i> <img src="/static/images/facebook.png" target="_blank" alt="" /></i>Online Treasure Hunt facebook page</a></p>
 				      </div>
 				   </div>
 				   
 				   <div class="social_networks">
 				      		<ul>
-				      			<li><a href="https://www.facebook.com/muktinitdurgapur" class="facebook"><i><img src="/static/images/facebook_icon.png target="_blank"" alt="" /></i> <span> Mukti 15 Facebook page</span><div class="clear"></div></a></li>
-				      			<li><a href="https://twitter.com/mukti_nitd target="_blank"" class="twitter"><i><img src="/static/images/tweets.png" alt="" /></i> <span> Mukti 15 Twitter page</span><div class="clear"></div></a></li>
+				      			<li><a href="https://www.facebook.com/muktinitdurgapur" class="facebook"><i><img src="/static/images/facebook_icon.png" target="_blank" alt="" /></i> <span> Mukti 15 Facebook page</span><div class="clear"></div></a></li>
+				      			<li><a href="https://twitter.com/mukti_nitd" target="_blank" class="twitter"><i><img src="/static/images/tweets.png" alt="" /></i> <span> Mukti 15 Twitter page</span><div class="clear"></div></a></li>
 				      		<!--	<li><a href="#" class="googleplus"><i><img src="images/google+.png" alt="" /></i> <span style='padding-right:10px;'>Mukti 15 Youtube Channel</span><div class="clear"></div></a></li> -->
 				    		</ul>
 		          	</div>
