Fixed player crossed count

--- a/templates/level.html
+++ b/templates/level.html
@@ -142,7 +142,7 @@
 	    		 <div class="chart">
 		                <div class="diagram">
 		                  <canvas id="canvas" height="220" width="220"> </canvas>
-		                  <h4><span>0</span><br /></h4>   
+		                  <h4><span>{{pass_count}}</span><br /></h4>   
 		                 </div>
 		                 <h3>people have crossed this level</h3>
 		               	              
