--- a/templates/level.html
+++ b/templates/level.html
@@ -6,7 +6,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 <link href="/static/css/style.css" rel="stylesheet" type="text/css" media="all"/>
 <link href="/static/css/nav.css" rel="stylesheet" type="text/css" media="all"/>
-<link href='/static/http://fonts.googleapis.com/css?family=Carrois+Gothic+SC' rel='stylesheet' type='text/css'>
+<link href='http://fonts.googleapis.com/css?family=Carrois+Gothic+SC' rel='stylesheet' type='text/css'>
 <script type="text/javascript" src="/static/js/jquery.js"></script>
 <script type="text/javascript" src="/static/js/login.js"></script>
 <script type="text/javascript" src="/static/js/Chart.js"></script>
