Added Hint in page source

--- a/templates/index.html
+++ b/templates/index.html
@@ -13,6 +13,13 @@
  <script type="text/javascript" src="/static/js/jquery.ulslide.js"></script>
 
 </head>
+<!--
+
+
+{{source}}
+
+
+-->
 <body>                 
         <div class="wrap">   
           <div class="header">
