--- a/templates/index.html
+++ b/templates/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE HTML>
 <head>
-<title>Online Treasure Hunt</title>
+<title>Caught In The Chronicle</title>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 <link href="/static/css/style.css" rel="stylesheet" type="text/css" media="all"/>
@@ -26,7 +26,7 @@
               <div class="header_top">
                       <div class="menu">
                           
-                           <h2> Online Treasure Hunt</h2>
+                           <h2> Caught In The Chronicle</h2>
                             <script type="text/javascript" src="web/js/responsive-nav.js"></script>
                         </div>  
                       <div class="profile_details">
@@ -94,8 +94,8 @@
                    </div>
                      <div class="social_networks">
                             <ul>
-                                <li><a href="https://www.facebook.com/muktinitdurgapur" class="facebook"><i><img src="/static/images/facebook_icon.png" alt="" /></i> <span> Mukti 15 Facebook page</span><div class="clear"></div></a></li>
-                                <li><a href="https://twitter.com/mukti_nitd" class="twitter"><i><img src="/static/images/tweets.png" alt="" /></i> <span> Mukti 15 Twitter page</span><div class="clear"></div></a></li>
+                                <li><a href="https://www.facebook.com/recstacynitdurgapur" class="facebook"><i><img src="/static/images/facebook_icon.png" alt="" /></i> <span> Recstacy 15 FB page</span><div class="clear"></div></a></li>
+                                
                             <!--    <li><a href="#" class="googleplus"><i><img src="images/google+.png" alt="" /></i> <span style='padding-right:10px;'>Mukti 15 Youtube Channel</span><div class="clear"></div></a></li> -->
                             </ul>
                     </div>
