--- a/templates/level.html
+++ b/templates/level.html
@@ -32,14 +32,14 @@
 	      	  <div class="header_top">
 					  <div class="menu">
 						  
-							<h2> Online Treasure Hunt - MUKTI 2015</h2>
+							<h2> Caught In The Chronicle - Recstacy 2015</h2>
 							
 							<script type="text/javascript" src="js/responsive-nav.js"></script>
 				        </div>	
 					  <div class="profile_details">
 				    		   <div id="loginContainer">
 				    		   <div class="user-info">
-							        			<h4>Hello,<a href="#"> {{name}} </a></h4>
+							        			<h4>Hello<a href="#"> {{name}} </a></h4>
 							        			<ul>
 							        				<li class="logout"><a href="/logout/"> Logout</a></li>
 							        				<div class="clear"></div>		
@@ -67,9 +67,6 @@
 
 	  		
             <div class="column_middle rndm2">
-            	<div class="column_right_grid" id="compt_image">
-            		<img src="/static/img/{{photo}}" />
-            	</div>
               	<div class="column_right_grid qstn">
                  <div class="newsletter">
 				   <h3>{{text}}</h3>
@@ -192,17 +189,11 @@
 					       <h4><a href="#">Forget Password?</a></h4> -->				   
           		       </div>
           		 	  <div class="signin_facebook">
-					   	 <p><a href="https://www.facebook.com/events/1387313484910337/?ref=br_tf" target="_blank">  <i> <img src="/static/images/facebook.png" alt="" /></i>Online Treasure Hunt Facebook Page</a></p>
+					   	 <p><a href="https://www.facebook.com/recstacynitdurgapur" target="_blank">  <i> <img src="/static/images/facebook.png" alt="" /></i>Online Treasure Hunt Facebook Page</a></p>
 				      </div>
 				   </div>
 				   
-				   <div class="social_networks">
-				      		<ul>
-				      			<li><a href="https://www.facebook.com/muktinitdurgapur" target="_blank" class="facebook"><i><img src="/static/images/facebook_icon.png" alt="" /></i> <span> Mukti 15 Facebook page</span><div class="clear"></div></a></li>
-				      			<li><a href="https://twitter.com/mukti_nitd" target="_blank" class="twitter"><i><img src="/static/images/tweets.png" alt="" /></i> <span> Mukti 15 Twitter page</span><div class="clear"></div></a></li>
-				      		<!--	<li><a href="#" class="googleplus"><i><img src="images/google+.png" alt="" /></i> <span style='padding-right:10px;'>Mukti 15 Youtube Channel</span><div class="clear"></div></a></li> -->
-				    		</ul>
-		          	</div>
+
 		             
 	  		</div>
     	<div class="clear"></div>
@@ -214,7 +205,7 @@
    <div class="wrap">	 
 	      <div class="header">
 	      	  <div class="header_top">
-	      	  		<h3 id="copy">Developed and Maintained by GNU/ Linux Users' Group, NIT Durgapur</h3>
+	      	  		<h3 id="copy">Developed and Hosted by GNU/ Linux Users' Group, NIT Durgapur</h3>
 					  <div class="menu">
 						  
 							
