Minor fixes to graph story

--- a/templates/level.html
+++ b/templates/level.html
@@ -189,7 +189,7 @@
 					       <h4><a href="#">Forget Password?</a></h4> -->				   
           		       </div>
           		 	  <div class="signin_facebook">
-					   	 <p><a href="https://www.facebook.com/recstacynitdurgapur" target="_blank">  <i> <img src="/static/images/facebook.png" alt="" /></i>Online Treasure Hunt Facebook Page</a></p>
+					   	 <p><a href="https://www.facebook.com/recstacynitdurgapur" target="_blank">  <i> <img src="/static/images/facebook.png" alt="" /></i>Recstacy 2015 Facebook Page</a></p>
 				      </div>
 				   </div>
 				   
