Adding picture via admin.

--- a/templates/level.html
+++ b/templates/level.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE HTML>
 <head>
 <title>{{title}}</title>
@@ -68,7 +67,7 @@
 	  		
             <div class="column_middle rndm2">
             	<div class="column_right_grid" id="compt_image">
-            		<img src="/static/img/{{photo}}" />
+            		<img src="/media/{{photo}}" />
             	</div>
               	<div class="column_right_grid qstn">
                  <div class="newsletter">
